2001-04-02  Derek Price  <dprice@collab.net>

	* sanity.sh (fork): New test for CVS_SERVER default.
	(TODO): Note about eventually removing most of the references to
	CVS_SERVER.

2001-04-02  Larry Jones  <larry.jones@sdrc.com>

	* client.c (connect_to_forked_server): Use program_path as the default
	server instead of "cvs".

2001-04-02  Derek Price  <dprice@collab.net>

	* sanity.sh: Use less obfuscated English in my comment about sanity
	checking sanity.sh.

2001-04-02  Derek Price  <dprice@collab.net>

	* sanity.sh (rm-update-message): Create a test directory again but
	change back to the correct directory upon completion this time.

2001-04-02  Derek Price  <dprice@collab.net>

	* sanity.sh: Change last two '[.*]'s to 'test's for
	consistency and remove...
	(TODO): the note from the TODO list.

2001-04-02  Derek Price  <dprice@collab.net>

	* sanity.sh: Add test for PWD before successful exit.

2001-03-30  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (rm-update-message): Remove duplicate code.

2001-03-30  Derek Price  <dprice@collab.net>

	* sanity.sh (rm-update-message): New test for local/client-server
	warning message discrepency.

2001-03-30  Larry Jones  <larry.jones@sdrc.com>

	* annotate.c: Move annotate() here from rcs.c, support rannotate.
	* Makefile.am, Makefile.in: Add annotate.c.
	* main.c (cmds[], cmd_usage[]): Add rannotate.
	* rcs.c: Move declarations of rcs_delta_op and RCS_deltas to...
	* rcs.h:    ... here.
	* server.c (serve_rannotate): New.
	(requests[]): Add rannotate.
	* sanity.sh (ann): New tests for rannotate.

	* log.c (rlog_proc): Remove dead code.

2001-03-30  Derek Price  <dprice@collab.net>

	* sanity.sh (join-readonly-conflict): Run more of this through dotest.

2001-03-30  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_fileproc): Don't output working file for rlog.
	* sanity.sh (log): New tests for rlog.

	* cvs.h (mtype): Add MISC type.
	* log.c (cvslog): Support rlog as well as log.
	(rlog_proc): New.